{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 120,
  "lineage": "04354d01-9960-d27b-649b-efd99b029b91",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad8782c25d3b64d2",
            "arn": "arn:aws:ec2:ap-south-1:122976268417:elastic-ip/eipalloc-0ad8782c25d3b64d2",
            "association_id": "eipassoc-04b86cbac01473f52",
            "domain": "vpc",
            "id": "eipalloc-0ad8782c25d3b64d2",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-00395f073c54dce61",
            "private_dns": "ip-10-30-1-166.ap-south-1.compute.internal",
            "private_ip": "10.30.1.166",
            "public_dns": "ec2-13-204-217-31.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.217.31",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "cloudzenia-ec2-nat-eip"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02d05f76acbed4e3e",
            "arn": "arn:aws:ec2:ap-south-1:122976268417:instance/i-08f78230df7076d47",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f78230df7076d47",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b8fd2bf3575228a8"
              }
            ],
            "primary_network_interface_id": "eni-0b8fd2bf3575228a8",
            "private_dns": "ip-10-30-11-156.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.11.156",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f4410462f6069b76",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026eadba51c4828a9",
            "tags": {
              "Name": "cloudzenia-ec2-1"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098dcc5bdc6718705"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122976268417",
            "id": "i-08f78230df7076d47",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private",
            "aws_vpc.ec2_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02d05f76acbed4e3e",
            "arn": "arn:aws:ec2:ap-south-1:122976268417:instance/i-092ca3614020798be",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092ca3614020798be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02b4542eaa455f1d6"
              }
            ],
            "primary_network_interface_id": "eni-02b4542eaa455f1d6",
            "private_dns": "ip-10-30-12-166.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.12.166",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09718781d33fc971e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4feede0de8c1098",
            "tags": {
              "Name": "cloudzenia-ec2-2"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098dcc5bdc6718705"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122976268417",
            "id": "i-092ca3614020798be",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private",
            "aws_vpc.ec2_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122976268417:internet-gateway/igw-075d9580b4aa035cd",
            "id": "igw-075d9580b4aa035cd",
            "owner_id": "122976268417",
            "region": "ap-south-1",
            "tags": {
              "Name": "cloudzenia-ec2-igw"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-igw"
            },
            "vpc_id": "vpc-0cce6312a11997439"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ec2_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:loadbalancer/app/cloudzenia-ec2-alb/ad336af5296329e4",
            "arn_suffix": "app/cloudzenia-ec2-alb/ad336af5296329e4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloudzenia-ec2-alb-262151849.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:loadbalancer/app/cloudzenia-ec2-alb/ad336af5296329e4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloudzenia-ec2-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0e19e21111a612f07"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e992dabacd2634f5"
              },
              {
                "subnet_id": "subnet-0f5cf2aa2cce359ad"
              }
            ],
            "subnets": [
              "subnet-0e992dabacd2634f5",
              "subnet-0f5cf2aa2cce359ad"
            ],
            "tags": {
              "Name": "cloudzenia-ec2-alb"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-alb"
            },
            "vpc_id": "vpc-0cce6312a11997439",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:loadbalancer/app/cloudzenia-ec2-alb/ad336af5296329e4"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener/app/cloudzenia-ec2-alb/ad336af5296329e4/99b8d2a4d668e59a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener/app/cloudzenia-ec2-alb/ad336af5296329e4/99b8d2a4d668e59a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:loadbalancer/app/cloudzenia-ec2-alb/ad336af5296329e4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener/app/cloudzenia-ec2-alb/ad336af5296329e4/99b8d2a4d668e59a"
          },
          "dependencies": [
            "aws_lb.ec2_alb",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener/app/cloudzenia-ec2-alb/ad336af5296329e4/2074cb6c10f03e77",
            "certificate_arn": "arn:aws:acm:ap-south-1:122976268417:certificate/997fd6f1-4417-487b-bf0e-74a26d781b87",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-instance-tg/7d91f3c4355490c3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener/app/cloudzenia-ec2-alb/ad336af5296329e4/2074cb6c10f03e77",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:loadbalancer/app/cloudzenia-ec2-alb/ad336af5296329e4",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener/app/cloudzenia-ec2-alb/ad336af5296329e4/2074cb6c10f03e77"
          },
          "dependencies": [
            "aws_lb.ec2_alb",
            "aws_lb_target_group.instance_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.ec2_vpc",
            "data.aws_acm_certificate.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alb_docker_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-docker-tg/e0bdd1953267eef3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener-rule/app/cloudzenia-ec2-alb/ad336af5296329e4/2074cb6c10f03e77/506a44cf8718ff92",
            "condition": [
              {
                "host_header": [
                  {
                    "regex_values": [],
                    "values": [
                      "ec2-alb-docker.lakshikabatteryworks.store",
                      "ec2-docker1.lakshikabatteryworks.store",
                      "ec2-docker2.lakshikabatteryworks.store"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener-rule/app/cloudzenia-ec2-alb/ad336af5296329e4/2074cb6c10f03e77/506a44cf8718ff92",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener/app/cloudzenia-ec2-alb/ad336af5296329e4/2074cb6c10f03e77",
            "priority": 20,
            "region": "ap-south-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener-rule/app/cloudzenia-ec2-alb/ad336af5296329e4/2074cb6c10f03e77/506a44cf8718ff92"
          },
          "dependencies": [
            "aws_lb.ec2_alb",
            "aws_lb_listener.https_listener",
            "aws_lb_target_group.docker_tg",
            "aws_lb_target_group.instance_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.ec2_vpc",
            "data.aws_acm_certificate.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alb_instance_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-instance-tg/7d91f3c4355490c3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener-rule/app/cloudzenia-ec2-alb/ad336af5296329e4/2074cb6c10f03e77/6010f6c8ea000daf",
            "condition": [
              {
                "host_header": [
                  {
                    "regex_values": [],
                    "values": [
                      "ec2-alb-instance.lakshikabatteryworks.store",
                      "ec2-instance1.lakshikabatteryworks.store",
                      "ec2-instance2.lakshikabatteryworks.store"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener-rule/app/cloudzenia-ec2-alb/ad336af5296329e4/2074cb6c10f03e77/6010f6c8ea000daf",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener/app/cloudzenia-ec2-alb/ad336af5296329e4/2074cb6c10f03e77",
            "priority": 10,
            "region": "ap-south-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:listener-rule/app/cloudzenia-ec2-alb/ad336af5296329e4/2074cb6c10f03e77/6010f6c8ea000daf"
          },
          "dependencies": [
            "aws_lb.ec2_alb",
            "aws_lb_listener.https_listener",
            "aws_lb_target_group.instance_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.ec2_vpc",
            "data.aws_acm_certificate.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "docker_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-docker-tg/e0bdd1953267eef3",
            "arn_suffix": "targetgroup/ec2-docker-tg/e0bdd1953267eef3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-docker-tg/e0bdd1953267eef3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:122976268417:loadbalancer/app/cloudzenia-ec2-alb/ad336af5296329e4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ec2-docker-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ec2-docker-tg"
            },
            "tags_all": {
              "Name": "ec2-docker-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cce6312a11997439"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-docker-tg/e0bdd1953267eef3"
          },
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "instance_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-instance-tg/7d91f3c4355490c3",
            "arn_suffix": "targetgroup/ec2-instance-tg/7d91f3c4355490c3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-instance-tg/7d91f3c4355490c3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:122976268417:loadbalancer/app/cloudzenia-ec2-alb/ad336af5296329e4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ec2-instance-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ec2-instance-tg"
            },
            "tags_all": {
              "Name": "ec2-instance-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cce6312a11997439"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-instance-tg/7d91f3c4355490c3"
          },
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "docker_tg_web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-docker-tg/e0bdd1953267eef3-20251127192031500400000008",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-docker-tg/e0bdd1953267eef3",
            "target_id": "i-08f78230df7076d47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web1",
            "aws_lb_target_group.docker_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private",
            "aws_vpc.ec2_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "docker_tg_web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-docker-tg/e0bdd1953267eef3-20251127192031369400000005",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-docker-tg/e0bdd1953267eef3",
            "target_id": "i-092ca3614020798be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web2",
            "aws_lb_target_group.docker_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private",
            "aws_vpc.ec2_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_tg_web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-instance-tg/7d91f3c4355490c3-20251127192031464700000006",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-instance-tg/7d91f3c4355490c3",
            "target_id": "i-08f78230df7076d47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web1",
            "aws_lb_target_group.instance_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private",
            "aws_vpc.ec2_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_tg_web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-instance-tg/7d91f3c4355490c3-20251127192031474900000007",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:122976268417:targetgroup/ec2-instance-tg/7d91f3c4355490c3",
            "target_id": "i-092ca3614020798be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web2",
            "aws_lb_target_group.instance_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private",
            "aws_vpc.ec2_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad8782c25d3b64d2",
            "association_id": "eipassoc-04b86cbac01473f52",
            "connectivity_type": "public",
            "id": "nat-025f4fc37f36af9f9",
            "network_interface_id": "eni-00395f073c54dce61",
            "private_ip": "10.30.1.166",
            "public_ip": "13.204.217.31",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e992dabacd2634f5",
            "tags": {
              "Name": "cloudzenia-ec2-nat-gw"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122976268417:route-table/rtb-011c7a0c63aa38d60",
            "id": "rtb-011c7a0c63aa38d60",
            "owner_id": "122976268417",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-025f4fc37f36af9f9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudzenia-ec2-private-rt"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cce6312a11997439"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122976268417",
            "id": "rtb-011c7a0c63aa38d60",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122976268417:route-table/rtb-0d77f007ad849f85c",
            "id": "rtb-0d77f007ad849f85c",
            "owner_id": "122976268417",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075d9580b4aa035cd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudzenia-ec2-public-rt"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cce6312a11997439"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122976268417",
            "id": "rtb-0d77f007ad849f85c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005c4c9fbeb075931",
            "region": "ap-south-1",
            "route_table_id": "rtb-011c7a0c63aa38d60",
            "subnet_id": "subnet-026eadba51c4828a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7d1d2efd88359a2",
            "region": "ap-south-1",
            "route_table_id": "rtb-011c7a0c63aa38d60",
            "subnet_id": "subnet-0c4feede0de8c1098"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082d3bb9c4e833802",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d77f007ad849f85c",
            "subnet_id": "subnet-0e992dabacd2634f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066a01a9acbe59d69",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d77f007ad849f85c",
            "subnet_id": "subnet-0f5cf2aa2cce359ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122976268417:security-group/sg-0e19e21111a612f07",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e19e21111a612f07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-alb-sg",
            "name_prefix": "",
            "owner_id": "122976268417",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-alb-sg"
            },
            "tags_all": {
              "Name": "ec2-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cce6312a11997439"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122976268417",
            "id": "sg-0e19e21111a612f07",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122976268417:security-group/sg-098dcc5bdc6718705",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098dcc5bdc6718705",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e19e21111a612f07"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-nginx-sg",
            "name_prefix": "",
            "owner_id": "122976268417",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-nginx-sg"
            },
            "tags_all": {
              "Name": "ec2-nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cce6312a11997439"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122976268417",
            "id": "sg-098dcc5bdc6718705",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122976268417:subnet/subnet-026eadba51c4828a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.30.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026eadba51c4828a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122976268417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "cloudzenia-ec2-private-1"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-private-1"
            },
            "vpc_id": "vpc-0cce6312a11997439"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122976268417",
            "id": "subnet-026eadba51c4828a9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122976268417:subnet/subnet-0c4feede0de8c1098",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.30.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4feede0de8c1098",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122976268417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "cloudzenia-ec2-private-2"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-private-2"
            },
            "vpc_id": "vpc-0cce6312a11997439"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122976268417",
            "id": "subnet-0c4feede0de8c1098",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122976268417:subnet/subnet-0e992dabacd2634f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e992dabacd2634f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122976268417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "cloudzenia-ec2-public-1"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-public-1"
            },
            "vpc_id": "vpc-0cce6312a11997439"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122976268417",
            "id": "subnet-0e992dabacd2634f5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122976268417:subnet/subnet-0f5cf2aa2cce359ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5cf2aa2cce359ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122976268417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "cloudzenia-ec2-public-2"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-public-2"
            },
            "vpc_id": "vpc-0cce6312a11997439"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122976268417",
            "id": "subnet-0f5cf2aa2cce359ad",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ec2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122976268417:vpc/vpc-0cce6312a11997439",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-075036a567b9f45d3",
            "default_route_table_id": "rtb-04aa990709425efc2",
            "default_security_group_id": "sg-0d57d2923e18cada1",
            "dhcp_options_id": "dopt-0d8655d87ac0ffea5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cce6312a11997439",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04aa990709425efc2",
            "owner_id": "122976268417",
            "region": "ap-south-1",
            "tags": {
              "Name": "cloudzenia-ec2-vpc"
            },
            "tags_all": {
              "Name": "cloudzenia-ec2-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122976268417",
            "id": "vpc-0cce6312a11997439",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}